--- a/lesson_2/index.html
+++ b/lesson_2/index.html
@@ -35,49 +35,57 @@
          </ol>
          <h4>Велике кіно</h4>
          <ol>
-            <li>Мої думки тихі</li>
-            <ul>
-               <li>2019, повнометражний фільм</li>
-            </ul>
-            <li>Королі палат</li>
-            <ul>
-               <li>2019, телесеріал</li>
-            </ul>
-            <li>Секс, інста і ЗНО</li>
-            <ul>
-               <li>2020, вебсеріал</li>
-            </ul>
-            <li>Люксембург, Люксембург</li>
-            <ul>
-               <li>2022, повнометражний фільм</li>
-            </ul>
+            <li>Мої думки тихі
+               <ul>
+                  <li>2019, повнометражний фільм</li>
+               </ul>
+            </li>
+            <li>Королі палат
+               <ul>
+                  <li>2019, телесеріал</li>
+               </ul>
+            </li>
+            <li>Секс, інста і ЗНО
+               <ul>
+                  <li>2020, вебсеріал</li>
+               </ul>
+            </li>
+            <li>Люксембург, Люксембург
+               <ul>
+                  <li>2022, повнометражний фільм</li>
+               </ul>
+            </li>
          </ol>
       </div>
       <div class="awards">
          <h5 id="title-3"><mark>Нагороди та номінації</mark></h5>
          <h6>Мої думки тихі</h6>
          <ul>Нагороди
-            <li>Міжнародний кінофестиваль у Санта-Моніці (2021)</li>
-            <ol>Категорія
-               <li>Найкращий міжнародний ігровий фільм - Перемога</li>
-            </ol>
-            <li>Золота дзиґа (2020)</li>
-            <ol>Категорії
-               <li>Найкращий фільм - Перемога</li>
-               <li>Накраща режисура - Номінація</li>
-               <li>Найкращий сценарій - Перемога</li>
-               <li>Відкриття року - Перемога</li>
-            </ol>
-            <li>Премія від "Української правди" (2020)</li>
-            <ol>Категорія
-               <li>Митець року - Перемога</li>
-            </ol>
-            <li>Кіноколо (2019)</li>
-            <ol>Категорії
-               <li>Відкриття року - Перемога</li>
-               <li>Накраща режисура - Номінація</li>
-               <li>Найкращий повнометражний ігровий фільм - Номінація</li>
-            </ol>
+            <li>Міжнародний кінофестиваль у Санта-Моніці (2021)
+               <ol>Категорія
+                  <li>Найкращий міжнародний ігровий фільм - Перемога</li>
+               </ol>
+            </li>
+            <li>Золота дзиґа (2020)
+               <ol>Категорії
+                  <li>Найкращий фільм - Перемога</li>
+                  <li>Накраща режисура - Номінація</li>
+                  <li>Найкращий сценарій - Перемога</li>
+                  <li>Відкриття року - Перемога</li>
+               </ol>
+            </li>
+            <li>Премія від "Української правди" (2020)
+               <ol>Категорія
+                  <li>Митець року - Перемога</li>
+               </ol>
+            </li>
+            <li>Кіноколо (2019)
+               <ol>Категорії
+                  <li>Відкриття року - Перемога</li>
+                  <li>Накраща режисура - Номінація</li>
+                  <li>Найкращий повнометражний ігровий фільм - Номінація</li>
+               </ol>
+            </li>
          </ul>
       </div>
    </main>
