--- a/lesson_9/index.html
+++ b/lesson_9/index.html
@@ -269,16 +269,11 @@
          <div class="why-us__block">
             <h2 class="why-us__title">Why Us For International Business Management Consulting!</h2>
             <div class="why-us__text">
-               <p>Completely synergized resourced taxings relationships premiers markets ultivate one-to-one customer
-                  service with robust ideas dynamically innovated resources leveling customer service for state of the
-                  art customer service innovate product for reliable supply engage web services cutting-edge
-                  deliverables.</p>
+               <p>Completely synergized resourced taxings relationships premiers markets ultivate one-to-one customer service with robust ideas dynamically innovated resources leveling customer service for state of the art customer service innovate product for reliable supply engage web services cutting-edge deliverables.</p>
             </div>
-            <h3 class="why-us__sub-title">Proactively envisioned multimedia based expertise media growth superior
-               collaboration.</h3>
+            <h3 class="why-us__sub-title">Proactively envisioned multimedia based expertise media growth superior collaboration. </h3>
             <div class="why-us__text">
-               <p>One-to-one customer service with robust ideas dynamically innovated resources for reliable supply
-                  engage web services cutting-edge deliverables.</p>
+               <p>One-to-one customer service with robust ideas dynamically innovated resources for reliable supply engage web services cutting-edge deliverables.</p>
             </div>
          </div>
          <div class="our-benefits__block">
@@ -296,8 +291,7 @@
          <div class="frequently-questions__block">
             <h2 class="frequently-questions__title">Frequently Asked Questions</h2>
             <div class="frequently-questions__text">
-               <p>Leveling customer service for state of the art customer service innovate product for reliable supply
-                  engage web services cutting-edge deliverables.</p>
+               <p>Leveling customer service for state of the art customer service innovate product for reliable supply engage web services cutting-edge deliverables.</p>
             </div>
          </div>
       </div>
@@ -308,18 +302,15 @@
             <h4 class="we-care__sub-title">Welcome Whitecollar</h4>
             <h2 class="we-care__title">We Care About Your Business Plan.</h2>
             <div class="we-care__text">
-               <p>Leverage agile frameworks to provide a robust synopsis for high level overviews.Iterative approaches
-                  to corporate strategy foster collaborative thinking to further the overal.</p>
-               <p>Leverage agile frameworks to provide a robust synopsis for high level overviews.Iterative approaches
-                  to corporate strategy </p>
+               <p>Leverage agile frameworks to provide a robust synopsis for high level overviews.Iterative approaches to corporate strategy foster collaborative thinking to further the overal.</p>
+               <p>Leverage agile frameworks to provide a robust synopsis for high level overviews.Iterative approaches to corporate strategy </p>
             </div>
          </div>
          <div>
             <div class="our-vmision__block">
                <h3 class="our-vmision__title">Our Vision</h3>
                <div class="our-vmision__text">
-                  <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta clickthroughs.
-                  </p>
+                  <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta clickthroughs.</p>
                </div>
             </div>
             <div class="our-vmision__block">
@@ -338,40 +329,42 @@
             <h4 class="screenshot-3__sub-title">Work Process</h4>
             <h2 class="screenshot-3__title">How We Work</h2>
          </div>
-         <div class="work-process">
-            <div class="work-process__img">
-               <img src="img/screen3-icon1.png" alt="icon">
-            </div>
-            <div class="work-process__content">
-               <h3 class="work-process__title">Make Appointment</h3>
-               <div class="work-process__text">
-                  <p>Leverage agile frameworks provide synopsishigh level overviews value proposition. </p>
+         <div class="work-processes">
+            <div class="work-process">
+               <div class="work-process__img">
+                  <img src="img/screen3-icon1.png" alt="icon">
                </div>
-               <a class="work-process__link" href="#">Testimonials</a>
-            </div>
-         </div>
-         <div class="work-process">
-            <div class="work-process__img">
-               <img src="img/screen3-icon2.png" alt="icon">
-            </div>
-            <div class="work-process__content">
-               <h3 class="work-process__title">Consultation</h3>
-               <div class="work-process__text">
-                  <p>Leverage agile frameworks provide synopsishigh level overviews value proposition. </p>
+               <div class="work-process__content">
+                  <h3 class="work-process__title">Make Appointment</h3>
+                  <div class="work-process__text">
+                     <p>Leverage agile frameworks provide synopsishigh level overviews value proposition. </p>
+                  </div>
+                  <a class="work-process__link" href="#">Testimonials</a>
                </div>
-               <a class="work-process__link" href="#">Testimonials</a>
             </div>
-         </div>
-         <div class="work-process">
-            <div class="work-process__img">
-               <img src="img/screen3-icon3.png" alt="icon">
-            </div>
-            <div class="work-process__content">
-               <h3 class="work-process__title">Enjoy the Service</h3>
-               <div class="work-process__text">
-                  <p>Leverage agile frameworks provide synopsishigh level overviews value proposition. </p>
+            <div class="work-process">
+               <div class="work-process__img">
+                  <img src="img/screen3-icon2.png" alt="icon">
                </div>
-               <a class="work-process__link" href="#">Testimonials</a>
+               <div class="work-process__content">
+                  <h3 class="work-process__title">Consultation</h3>
+                  <div class="work-process__text">
+                     <p>Leverage agile frameworks provide synopsishigh level overviews value proposition. </p>
+                  </div>
+                  <a class="work-process__link" href="#">Testimonials</a>
+               </div>
+            </div>
+            <div class="work-process">
+               <div class="work-process__img">
+                  <img src="img/screen3-icon3.png" alt="icon">
+               </div>
+               <div class="work-process__content">
+                  <h3 class="work-process__title">Enjoy the Service</h3>
+                  <div class="work-process__text">
+                     <p>Leverage agile frameworks provide synopsishigh level overviews value proposition. </p>
+                  </div>
+                  <a class="work-process__link" href="#">Testimonials</a>
+               </div>
             </div>
          </div>
       </div>
