--- a/lesson_12/index.html
+++ b/lesson_12/index.html
@@ -31,7 +31,7 @@
                         </ul>
                      </li>
                      <li class="sub-menu__item">
-                        <a href="#" class="sub-menu__link">Screenshot</a>
+                        <a href="#screenshot" class="sub-menu__link">Screenshot</a>
                      </li>
                      <li class="sub-menu__item">
                         <a href="#" class="sub-menu__link">Item 3</a>
@@ -120,7 +120,7 @@
                </div>
             </div>
          </div>
-         <div class="screenshot">
+         <div id="screenshot" class="screenshot">
             <div class="screenshot__container">
                <div class="screenshot__items experts">
                   <div class="experts__row experts__row--first expert">
