--- a/lesson_13/index.html
+++ b/lesson_13/index.html
@@ -32,7 +32,7 @@
                   <a href="#other-properties" class="menu__link">Other properties</a>
                </li>
                <li class="menu__item">
-                  <a href="#" class="menu__link">Car</a>
+                  <a href="#car" class="menu__link">Car</a>
                </li>
             </ul>
          </div>
@@ -139,7 +139,7 @@
                </div>
             </div>
          </div>
-         <div class="car">
+         <div id="car" class="car">
             <div class="car__container">
                <div class="car__body">
                   <div class="roof"></div>
@@ -188,7 +188,7 @@
       </main>
 
       <!-- ------------------------------------------ -->
-      <footer class="footer"></footer>
+      <footer class="footer">SEE U SOON</footer>
    </div>
 </body>
 
