--- a/lesson_15/index.html
+++ b/lesson_15/index.html
@@ -50,7 +50,7 @@
             <!-- ============== for man ============== -->
             <div class="page__item">
                <div class="for-man">
-                  <h2 class="page-item__title page-item__title--for-man">Categories For Men</h2>
+                  <h2 class="for-man__title">Categories For Men</h2>
                   <div class="for-man__cards">
                      <div class="for-man__column">
                         <div class="for-man__product-card card-product">
@@ -203,7 +203,7 @@
             <!-- ========= wishlist ============ -->
             <div class="page__item">
                <div class="wishlist">
-                  <h2 class="page-item__title">Wishlist</h2>
+                  <h2 class="wishlist__title">Wishlist</h2>
                   <div class="wishlist__body">
                      <div class="wishlist__card wish-product">
                         <div class="wish-product__item">
@@ -304,10 +304,9 @@
             <!-- ========== orders ============ -->
             <div class="page__item">
                <div class="orders">
-                  <h2 class="page-item__title">My Orders</h2>
-                  <ul class="orders__list">
-                     <li class="order-card">
-                        <div class="order__text-info info-text">
+                  <ul class="orders__list order-card">
+                     <li class="order-card__item">
+                        <div class="order-card__text-info info-text">
                            <h4 class="info-text__order-number">Order no: #123456789</h4>
                            <div class="info-text__body">
                               <div class="info-text__left-side">
@@ -320,7 +319,7 @@
                               </div>
                            </div>
                         </div>
-                        <div class="order__product-info info-product">
+                        <div class="order-card__product-info info-product">
                            <div class="info-product__img">
                               <a href="#"><img src="img/orders/orders01.webp" alt="#"></a>
                            </div>
@@ -333,14 +332,14 @@
                                     <p>Total : $23.00</p>
                                  </div>
                               </div>
-                              <div class="order__product-button button-product">
+                              <div class="order-card__product-button button-product">
                                  <a href="#" class="button-product__link">View Detail</a>
                               </div>
                            </div>
                         </div>
                      </li>
-                     <li class="order-card">
-                        <div class="order__text-info info-text">
+                     <li class="order-card__item">
+                        <div class="order-card__text-info info-text">
                            <h4 class="info-text__order-number">Order no: #123456789</h4>
                            <div class="info-text__body">
                               <div class="info-text__left-side">
@@ -353,7 +352,7 @@
                               </div>
                            </div>
                         </div>
-                        <div class="order__product-info info-product">
+                        <div class="order-card__product-info info-product">
                            <div class="info-product__img">
                               <a href="#"><img src="img/orders/orders02.webp" alt="#"></a>
                            </div>
@@ -366,14 +365,14 @@
                                     <p>Total : $143.00</p>
                                  </div>
                               </div>
-                              <div class="order__product-button button-product">
+                              <div class="order-card__product-button button-product">
                                  <a href="#" class="button-product__link">View Detail</a>
                               </div>
                            </div>
                         </div>
                      </li>
-                     <li class="order-card">
-                        <div class="order__text-info info-text">
+                     <li class="order-card__item">
+                        <div class="order-card__text-info info-text">
                            <h4 class="info-text__order-number">Order no: #123456789</h4>
                            <div class="info-text__body">
                               <div class="info-text__left-side">
@@ -386,7 +385,7 @@
                               </div>
                            </div>
                         </div>
-                        <div class="order__product-info info-product">
+                        <div class="order-card__product-info info-product">
                            <div class="info-product__img">
                               <a href="#"><img src="img/orders/orders03.webp" alt="#"></a>
                            </div>
@@ -399,7 +398,7 @@
                                     <p>Total : $93.00</p>
                                  </div>
                               </div>
-                              <div class="order__product-button button-product">
+                              <div class="order-card__product-button button-product">
                                  <a href="#" class="button-product__link">View Detail</a>
                               </div>
                            </div>
