--- a/lesson_17/index.html
+++ b/lesson_17/index.html
@@ -13,6 +13,7 @@
       <header class="header">LESSON 17</header>
 
       <main class="page">
+
          <div class="practice">
             <div class="practice__container">
                <div class="practice__items">
@@ -35,7 +36,7 @@
                   </div>
                   <div class="practice__column">
                      <div class="practice__item practice__item--big-font">
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate et debitis ad, adipisci nesciunt impedit non excepturi eveniet commodi iure modi sint similique vel consequatur ab dolor necessitatibus nobis natus?</p>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate et debitis ad, adipisci nesciunt impedit non excepturi eveniet commodi iure modi sint similique vel consequatur dolor necessitatibus nobis natus?</p>
                      </div>
                   </div>
                   <div class="practice__column">
@@ -52,12 +53,58 @@
                </div>
             </div>
          </div>
-   </div>
-   </main>
 
-   <footer class="footer">
-      SEE U SOON ;]
-   </footer>
+         <div class="pretty-stones">
+            <div class="pretty-stones__products products">
+
+               <div class="products__popular popular-products">
+                  <div class="popular-products__container">
+                     <div class="popular-products__body">
+                        <h2 class="popular-products__title">Ours Popular Products</h2>
+                        <h5 class="popular-products__subtitle">Best Seller Product This Week!</h5>
+                        <div class="popular-products__items">
+                           <div class="popular-products__column product-article">
+                              <img class="product-article__img" src="img/screen-1/product-article-01.jpg" alt="#">
+                              <h4 class="product-article__title">Engagement Rings – a Buyer’s Guide</h4>
+                              <p class="product-article__text">Video marketing is a powerful marketing strategy that allows you to portray an advertisement in the form of a story, which can</p>
+                              <div class="product-article__links">
+                                 <a class="product-article__link" href="#">Read more</a>
+                                 <a class="product-article__link-arrow" href="#"><img src="img/screen-1/icon.svg" alt=""></a>
+                              </div>
+                           </div>
+                           <div class="popular-products__column product-article">
+                              <img class="product-article__img" src="img/screen-1/product-article-02.jpg" alt="#">
+                              <h4 class="product-article__title">Engagement Rings – a Buyer’s Guide</h4>
+                              <p class="product-article__text">Video marketing is a powerful marketing strategy that allows you to portray an advertisement in the form of a story, which can</p>
+                              <div class="product-article__links">
+                                 <a class="product-article__link" href="#">Read more</a>
+                                 <a class="product-article__link-arrow" href="#"><img src="img/screen-1/icon.svg" alt=""></a>
+                              </div>
+                           </div>
+                           <div class="popular-products__column product-article">
+                              <img class="product-article__img" src="img/screen-1/product-article-03.jpg" alt="#">
+                              <h4 class="product-article__title">Engagement Rings – a Buyer’s Guide</h4>
+                              <p class="product-article__text">Video marketing is a powerful marketing strategy that allows you to portray an advertisement in the form of a story, which can</p>
+                              <div class="product-article__links">
+                                 <a class="product-article__link" href="#">Read more</a>
+                                 <a class="product-article__link-arrow" href="#"><img src="img/screen-1/icon.svg" alt=""></a>
+                              </div>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+
+               <div class="products__catalog">
+
+               </div>
+            </div>
+         </div>
+      </main>
+
+      <footer class="footer">
+         SEE U SOON ;]
+      </footer>
    </div>
 </body>
 
