--- a/lesson_17/index.html
+++ b/lesson_17/index.html
@@ -95,8 +95,36 @@
                   </div>
                </div>
 
-               <div class="products__catalog">
-
+               <div class="products__bestsellers bestsellers-products">
+                  <div class="bestsellers-products__container">
+                     <div class="bestsellers-products__body">
+                        <h2 class="bestsellers-products__title">Most Popular Product</h2>
+                        <h5 class="bestsellers-products__subtitle">Best Seller Product This Week!</h5>
+                        <div class="bestsellers-products__items">
+                           <div class="bestsellers-products__column bestseller-card">
+                              <a class="bestseller-card__link-img" href="#"><img class="bestseller-card__img" src="img/screen-2/bestseller-01.jpg" alt="#"></a>
+                              <a href="#" class="bestseller-card__title">Embossed hoop earrings</a>
+                              <p class="bestseller-card__price">$144.00</p>
+                           </div>
+                           <div class="bestsellers-products__column bestseller-card">
+                              <a class="bestseller-card__link-img" href="#"><img class="bestseller-card__img" src="img/screen-2/bestseller-02.jpg" alt="#"></a>
+                              <a href="#" class="bestseller-card__title">Embossed hoop earrings</a>
+                              <p class="bestseller-card__price">$144.00</p>
+                           </div>
+                           <div class="bestsellers-products__column bestseller-card">
+                              <a class="bestseller-card__link-img" href="#"><img class="bestseller-card__img" src="img/screen-2/bestseller-03.jpg" alt="#"></a>
+                              <a href="#" class="bestseller-card__title">Embossed hoop earrings</a>
+                              <p class="bestseller-card__price">$144.00</p>
+                           </div>
+                           <div class="bestsellers-products__column bestseller-card">
+                              <a class="bestseller-card__link-img" href="#"><img class="bestseller-card__img" src="img/screen-2/bestseller-04.jpg" alt="#"></a>
+                              <a href="#" class="bestseller-card__title">Embossed hoop earrings</a>
+                              <p class="bestseller-card__price">$144.00</p>
+                           </div>
+                        </div>
+                        <div class="bestsellers-products__button"><a href="#" class="bestsellers-products__link-button">View More</a></div>
+                     </div>
+                  </div>
                </div>
             </div>
          </div>
