--- a/lesson_17/index.html
+++ b/lesson_17/index.html
@@ -100,29 +100,66 @@
                      <div class="bestsellers-products__body">
                         <h2 class="bestsellers-products__title">Most Popular Product</h2>
                         <h5 class="bestsellers-products__subtitle">Best Seller Product This Week!</h5>
-                        <div class="bestsellers-products__items">
-                           <div class="bestsellers-products__column bestseller-card">
-                              <a class="bestseller-card__link-img" href="#"><img class="bestseller-card__img" src="img/screen-2/bestseller-01.jpg" alt="#"></a>
-                              <a href="#" class="bestseller-card__title">Embossed hoop earrings</a>
-                              <p class="bestseller-card__price">$144.00</p>
+                        <div class="products-items products-items--margin">
+                           <div class="products-items__column product-card">
+                              <a class="product-card__link-img" href="#"><img class="product-card__img" src="img/screen-2/bestseller-01.jpg" alt="#"></a>
+                              <a href="#" class="product-card__title">Embossed hoop earrings</a>
+                              <p class="product-card__price">$144.00</p>
                            </div>
-                           <div class="bestsellers-products__column bestseller-card">
-                              <a class="bestseller-card__link-img" href="#"><img class="bestseller-card__img" src="img/screen-2/bestseller-02.jpg" alt="#"></a>
-                              <a href="#" class="bestseller-card__title">Embossed hoop earrings</a>
-                              <p class="bestseller-card__price">$144.00</p>
+                           <div class="products-items__column product-card">
+                              <a class="product-card__link-img" href="#"><img class="product-card__img" src="img/screen-2/bestseller-02.jpg" alt="#"></a>
+                              <a href="#" class="product-card__title">Embossed hoop earrings</a>
+                              <p class="product-card__price">$144.00</p>
                            </div>
-                           <div class="bestsellers-products__column bestseller-card">
-                              <a class="bestseller-card__link-img" href="#"><img class="bestseller-card__img" src="img/screen-2/bestseller-03.jpg" alt="#"></a>
-                              <a href="#" class="bestseller-card__title">Embossed hoop earrings</a>
-                              <p class="bestseller-card__price">$144.00</p>
+                           <div class="products-items__column product-card">
+                              <a class="product-card__link-img" href="#"><img class="product-card__img" src="img/screen-2/bestseller-03.jpg" alt="#"></a>
+                              <a href="#" class="product-card__title">Embossed hoop earrings</a>
+                              <p class="product-card__price">$144.00</p>
                            </div>
-                           <div class="bestsellers-products__column bestseller-card">
-                              <a class="bestseller-card__link-img" href="#"><img class="bestseller-card__img" src="img/screen-2/bestseller-04.jpg" alt="#"></a>
-                              <a href="#" class="bestseller-card__title">Embossed hoop earrings</a>
-                              <p class="bestseller-card__price">$144.00</p>
+                           <div class="products-items__column product-card">
+                              <a class="product-card__link-img" href="#"><img class="product-card__img" src="img/screen-2/bestseller-04.jpg" alt="#"></a>
+                              <a href="#" class="product-card__title">Embossed hoop earrings</a>
+                              <p class="product-card__price">$144.00</p>
                            </div>
                         </div>
                         <div class="bestsellers-products__button"><a href="#" class="bestsellers-products__link-button">View More</a></div>
+                     </div>
+                  </div>
+               </div>
+
+               <div class="products__catalog catalog-products">
+                  <div class="catalog-products__container">
+                     <div class="catalog-products__body">
+                        <h2 class="catalog-products__title">Our Products</h2>
+                        <h5 class="catalog-products__subtitle">Add our products to weekly lineup</h5>
+                        <ul class="catalog-products__menu">
+                           <li class="catalog-products__menu-item"><a class="catalog-products__menu-link" href="#">Gold</a></li>
+                           <li class="catalog-products__menu-item"><a class="catalog-products__menu-link" href="#">Diamond</a></li>
+                           <li class="catalog-products__menu-item"><a class="catalog-products__menu-link" href="#">Bronze</a></li>
+                           <li class="catalog-products__menu-item"><a class="catalog-products__menu-link" href="#">Silver</a></li>
+                        </ul>
+                        <div class="products-items">
+                           <div class="products-items__column product-card">
+                              <a class="product-card__link-img" href="#"><img class="product-card__img" src="img/screen-3/catalog-01.jpg" alt="#"></a>
+                              <a href="#" class="product-card__title">Embossed hoop earrings</a>
+                              <p class="product-card__price">$144.00</p>
+                           </div>
+                           <div class="products-items__column product-card">
+                              <a class="product-card__link-img" href="#"><img class="product-card__img" src="img/screen-3/catalog-02.jpg" alt="#"></a>
+                              <a href="#" class="product-card__title">Embossed hoop earrings</a>
+                              <p class="product-card__price">$144.00</p>
+                           </div>
+                           <div class="products-items__column product-card">
+                              <a class="product-card__link-img" href="#"><img class="product-card__img" src="img/screen-3/catalog-03.jpg" alt="#"></a>
+                              <a href="#" class="product-card__title">Embossed hoop earrings</a>
+                              <p class="product-card__price">$144.00</p>
+                           </div>
+                           <div class="products-items__column product-card">
+                              <a class="product-card__link-img" href="#"><img class="product-card__img" src="img/screen-3/catalog-04.jpg" alt="#"></a>
+                              <a href="#" class="product-card__title">Embossed hoop earrings</a>
+                              <p class="product-card__price">$144.00</p>
+                           </div>
+                        </div>
                      </div>
                   </div>
                </div>
