--- a/lesson_17/index.html
+++ b/lesson_17/index.html
@@ -140,22 +140,22 @@
                         </ul>
                         <div class="products-items">
                            <div class="products-items__column product-card">
-                              <a class="product-card__link-img" href="#"><img class="product-card__img" src="img/screen-3/catalog-01.jpg" alt="#"></a>
+                              <a class="product-card__link-img product-card__link-img--border" href="#"><img class="product-card__img product-card__img--border" src="img/screen-3/catalog-01.jpg" alt="#"></a>
                               <a href="#" class="product-card__title">Embossed hoop earrings</a>
                               <p class="product-card__price">$144.00</p>
                            </div>
                            <div class="products-items__column product-card">
-                              <a class="product-card__link-img" href="#"><img class="product-card__img" src="img/screen-3/catalog-02.jpg" alt="#"></a>
+                              <a class="product-card__link-img product-card__link-img--border" href="#"><img class="product-card__img product-card__img--border" src="img/screen-3/catalog-02.jpg" alt="#"></a>
                               <a href="#" class="product-card__title">Embossed hoop earrings</a>
                               <p class="product-card__price">$144.00</p>
                            </div>
                            <div class="products-items__column product-card">
-                              <a class="product-card__link-img" href="#"><img class="product-card__img" src="img/screen-3/catalog-03.jpg" alt="#"></a>
+                              <a class="product-card__link-img product-card__link-img--border" href="#"><img class="product-card__img product-card__img--border" src="img/screen-3/catalog-03.jpg" alt="#"></a>
                               <a href="#" class="product-card__title">Embossed hoop earrings</a>
                               <p class="product-card__price">$144.00</p>
                            </div>
                            <div class="products-items__column product-card">
-                              <a class="product-card__link-img" href="#"><img class="product-card__img" src="img/screen-3/catalog-04.jpg" alt="#"></a>
+                              <a class="product-card__link-img product-card__link-img--border" href="#"><img class="product-card__img product-card__img--border" src="img/screen-3/catalog-04.jpg" alt="#"></a>
                               <a href="#" class="product-card__title">Embossed hoop earrings</a>
                               <p class="product-card__price">$144.00</p>
                            </div>
