--- a/lesson_18/individual.html
+++ b/lesson_18/individual.html
@@ -4,12 +4,13 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="css/style.css">
-   <title>Lesson 18</title>
+   <link rel="stylesheet" href="css/individual.css">
+   <title>Lesson 18 2.0</title>
 </head>
 
 <body>
    <div class="wrapper">
+
       <header class="header">
          <div class="header__container">
             <div class="header__logo">
@@ -68,46 +69,34 @@
             </div>
 
             <div class="header__actions actions-header">
-               <a href="#" class="actions-header__item">
-                  <img src="img/favorites.png" alt="favorites">
-                  <span>1</span>
-               </a>
-               <a href="#" class="actions-header__item">
-                  <img src="img/cart.png" alt="cart">
-                  <span>1</span>
-               </a>
-               <button class="actions-header__menu icon-menu">
+               <a href="#" class="actions-header__item">Log In</a>
+               <button class="actions-header__icon icon-menu">
                   <span></span>
                </button>
             </div>
-
          </div>
       </header>
 
       <main class="page">
          <div class="page__hero hero">
-            <div class="hero__decor hero__decor--line-left"></div>
-            <div class="hero__decor hero__decor--img-left">
-               <img src="img/screen-1/decor-left.png" alt="decor image">
-            </div>
-            <div class="hero__decor hero__decor--line-right"></div>
-            <div class="hero__decor hero__decor--img-right">
-               <img src="img/screen-1/decor-right.png" alt="decor image">
-            </div>
             <div class="hero__container">
-               <div class="hero__body">
-                  <h1 class="hero__title">Jewellery Collection</h1>
-                  <a href="#" class="hero__button">Shop Now</a>
-               </div>
-               <div class="hero__image">
-                  <img src="img/screen-1/hero-image.jpg" alt="Image">
-               </div>
                <div class="hero__content content-hero">
+                  <h2 class="content-hero__title">Individual Jewelry Design</h2>
                   <div class="content-hero__text">
-                     <p>There are many variations of passages of Lorem Ipsum available, but the majority</p>
+                     <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered</p>
                   </div>
-                  <div class="content-hero__item">
-                     Handcrafted <br> & ethically Sources
+                  <div class="content-hero__action action-hero">
+                     <a href="index.html" class="action-hero__button">Shop Now</a>
+                     <a href="#" class="action-hero__link">Video Now</a>
+                  </div>
+               </div>
+
+               <div class="hero__img img-hero">
+                  <div class="img-hero__item img-hero__item--left">
+                     <img src="img/screen-2/hero-img-left.jpg" alt="#">
+                  </div>
+                  <div class="img-hero__item img-hero__item--right">
+                     <img src="img/screen-2/hero-img-right.jpg" alt="#">
                   </div>
                </div>
             </div>
@@ -115,8 +104,9 @@
       </main>
 
       <footer class="footer">
-         <a href="individual.html" target="_blank" class="footer__link">The second part of the homework</a>
+         <a href="index.html" target="_blank" class="footer__link">The first part of the homework</a>
       </footer>
+
    </div>
    <script src="js/script.js"></script>
 </body>
