--- a/lesson_19/index.html
+++ b/lesson_19/index.html
@@ -42,7 +42,7 @@
 
          <div class="new-arrival">
             <div class="new-arrival__container">
-               <div class="new-arrival__title title">New Arrival</div>
+               <h2 class="new-arrival__title title">New Arrival</h2>
                <div class="new-arrival__slider slider">
                   <a href="#" class="slider__item">
                      <div class="slider__img"><img src="img/new-arrival-01.jpg" alt="image"></div>
@@ -60,6 +60,95 @@
                      <div class="slider__img"><img src="img/new-arrival-04.jpg" alt="image"></div>
                      <h3 class="slider__title">Urban Shirts</h3>
                   </a>
+               </div>
+            </div>
+         </div>
+
+         <div class="discount">
+            <div class="discount__container">
+               <h2 class="discount__title title">Big Saving Zone</h2>
+               <div class="discount-cards">
+                  <div class="discount-cards__item">
+                     <img src="img/big-saving-zone-01.jpg" alt="image" class="discount-cards__img">
+                     <div class="discount-cards__body">
+                        <div class="discount-cards__content discount-cards__content--white">
+                           <h3 class="discount-cards__title">
+                              <a href="#" class="discount-cards__link-title">Hawaiian <br> Shirts</a>
+                           </h3>
+                           <h4 class="discount-cards__subtitle">Dress up in summer vibe</h4>
+                           <p class="discount-cards__text">UPTO 50% OFF</p>
+                           <svg width="23" height="26" viewBox="0 0 23 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                              <path id="arrow" d="M11.5678 1.28613L11.5678 23.8893M22 15.1958L12.7972 24.3985C12.1182 25.0775 11.0173 25.0775 10.3383 24.3985L1.13557 15.1958" stroke="white" stroke-width="2" stroke-linecap="round"/>
+                           </svg>
+                           <a href="#" class="discount-cards__button">SHOP NOW</a>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="discount-cards__item">
+                     <img src="img/big-saving-zone-02.jpg" alt="image" class="discount-cards__img">
+                     <div class="discount-cards__body discount-cards__body--right">
+                        <div class="discount-cards__content discount-cards__content--white discount-cards__content--right">
+                           <p class="discount-cards__label">Limited Stock</p>
+                           <h3 class="discount-cards__title">
+                              <a href="#" class="discount-cards__link-title">Printed <br>T-Shirt</a>
+                           </h3>
+                           <h4 class="discount-cards__subtitle">New Designs Every Week</h4>
+                           <p class="discount-cards__text">UPTO 40% OFF</p>
+                           <svg width="23" height="26" viewBox="0 0 23 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                              <path id="arrow" d="M11.5678 1.28613L11.5678 23.8893M22 15.1958L12.7972 24.3985C12.1182 25.0775 11.0173 25.0775 10.3383 24.3985L1.13557 15.1958" stroke="white" stroke-width="2" stroke-linecap="round"/>
+                           </svg>
+                           <a href="#" class="discount-cards__button">SHOP NOW</a>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="discount-cards__item">
+                     <img src="img/big-saving-zone-03.jpg" alt="image" class="discount-cards__img">
+                     <div class="discount-cards__body">
+                        <div class="discount-cards__content discount-cards__content--right">
+                           <h3 class="discount-cards__title">
+                              <a href="#" class="discount-cards__link-title">Cargo <br>Joggers</a>
+                           </h3>
+                           <h4 class="discount-cards__subtitle">Move with style & comfort</h4>
+                           <p class="discount-cards__text">UPTO 50% OFF</p>
+                           <svg width="27" height="31" viewBox="0 0 27 31" fill="none" xmlns="http://www.w3.org/2000/svg">
+                              <path id="arrow" d="M13.6864 2.04785L13.6864 27.88M25.6089 17.9446L15.0914 28.462C14.3154 29.238 13.0573 29.238 12.2813 28.462L1.76383 17.9446" stroke="#3C4242" stroke-width="2.28571" stroke-linecap="round"/>
+                           </svg>
+                           <a href="#" class="discount-cards__button discount-cards__button--dark">SHOP NOW</a>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="discount-cards__item discount-cards__item--bottom">
+                     <img src="img/big-saving-zone-04.jpg" alt="image" class="discount-cards__img">
+                     <div class="discount-cards__body discount-cards__body--bottom">
+                        <div class="discount-cards__content discount-cards__content--right">
+                           <h3 class="discount-cards__title">
+                              <a href="#" class="discount-cards__link-title">Urban <br>Shirts</a>
+                           </h3>
+                           <h4 class="discount-cards__subtitle">Live In Confort</h4>
+                           <p class="discount-cards__text">FLAT 60% OFF</p>
+                           <svg width="27" height="31" viewBox="0 0 27 31" fill="none" xmlns="http://www.w3.org/2000/svg">
+                              <path id="arrow" d="M13.6864 2.04785L13.6864 27.88M25.6089 17.9446L15.0914 28.462C14.3154 29.238 13.0573 29.238 12.2813 28.462L1.76383 17.9446" stroke="#3C4242" stroke-width="2.28571" stroke-linecap="round"/>
+                           </svg>
+                           <a href="#" class="discount-cards__button discount-cards__button--dark">SHOP NOW</a>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="discount-cards__item discount-cards__item--bottom">
+                     <img src="img/big-saving-zone-05.jpg" alt="image" class="discount-cards__img">
+                     <div class="discount-cards__body discount-cards__body--bottom">
+                        <div class="discount-cards__content discount-cards__content--right">
+                           <h3 class="discount-cards__title">
+                              <a href="#" class="discount-cards__link-title">Oversized <br>T-Shirts</a>
+                           </h3>
+                           <h4 class="discount-cards__subtitle">Street Style Icon</h4>
+                           <p class="discount-cards__text">FLAT 60% OFF</p>
+                           <svg width="27" height="31" viewBox="0 0 27 31" fill="none" xmlns="http://www.w3.org/2000/svg">
+                              <path id="arrow" d="M13.6864 2.04785L13.6864 27.88M25.6089 17.9446L15.0914 28.462C14.3154 29.238 13.0573 29.238 12.2813 28.462L1.76383 17.9446" stroke="#3C4242" stroke-width="2.28571" stroke-linecap="round"/>
+                           </svg>
+                           <a href="#" class="discount-cards__button discount-cards__button--dark">SHOP NOW</a>
+                        </div>
+                     </div>
+                  </div>
                </div>
             </div>
          </div>
